# kget

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: kget.py
talnalas/: .gdb_history  Makefile  solution  solution.cpp
testdata/stringmatching/: Makefile  solution.cpp
velkomin/: bits.h  solution  solution.cpp
