[project]
name = "kget"
version = "0.0.2"
authors = [ { name="Arthur Ozga", email="aozgaa@gmail.com" }, ]
description = "client to kattis"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/aozgaa/kget"
"Bug Tracker" = "https://github.com/aozgaa/kget/issues"

[project.scripts]
kget = "kget:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
